# thesis

./: .gitignore  README.md  pyproject.toml  run_experiments_FL.py  run_experiments_centralized.py  run_experiments_per_dataset.py  run_experiments_window_sizes.py
harflwr/: centralized.py  client_app.py  customized_strategies.py  data_precomputed.py  evaluate_centralized.py  evaluate_fl.py  experiment_utils.py  preprocess_windows.py  server_app.py  task.py
precomputed/FLAAP_magstd/: client_000_test.npz  client_001_train.npz  client_001_val.npz  client_002_train.npz  client_002_val.npz  client_003_train.npz  client_003_val.npz  client_004_train.npz  client_004_val.npz  client_005_test.npz  client_006_train.npz  client_006_val.npz  client_007_train.npz  client_007_val.npz  manifest.csv  metadata.json
precomputed/HAPT_magstd/: client_000_train.npz  client_000_val.npz  client_001_test.npz  client_002_test.npz  client_003_train.npz  client_003_val.npz  client_004_test.npz  client_005_train.npz  client_005_val.npz  client_006_train.npz  client_006_val.npz  client_007_train.npz  client_007_val.npz  client_008_test.npz  client_009_train.npz  client_009_val.npz  client_010_train.npz  client_010_val.npz  client_011_train.npz  client_011_val.npz  client_012_train.npz  client_012_val.npz  client_013_test.npz  client_014_train.npz  client_014_val.npz  client_015_train.npz  client_015_val.npz  client_016_train.npz  client_016_val.npz  client_017_train.npz  client_017_val.npz  client_018_train.npz  client_018_val.npz  client_019_train.npz  client_019_val.npz  client_020_train.npz  client_020_val.npz  client_021_train.npz  client_021_val.npz  client_022_train.npz  (+16 more)
precomputed/HARTH_magstd/: client_000_train.npz  client_000_val.npz  client_002_val.npz  (+37 more)
(+9143 files in other folders)
