[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "har-flower"
version = "0.1.0"
description = "Federated learning for HAR using Flower"
license = "MIT"
dependencies = [
    "flwr[simulation]>=1.29.0",
    "torch",
    "pandas",
    "numpy",
    "scikit-learn",
    "tqdm",
]

[tool.setuptools]
packages = ["harflwr"]

[tool.flwr.app]
publisher = "you"

[tool.flwr.app.components]
serverapp = "harflwr.server_app:app"
clientapp = "harflwr.client_app:app"

[tool.flwr.app.config]
# ── Data ──────────────────────────────────────────────────────────────────────
precomputed-dir = "precomputed/partB_blockA_magstd"

# ── Training constants (never change) ─────────────────────────────────────────
fraction-train = 1.0
fraction-evaluate = 1.0
local-epochs = 1
learning-rate = 0.0001
batch-size = 32
window-seconds = 5.0
overlap-ratio = 0.5
chunk-size = 32

# ── Model ─────────────────────────────────────────────────────────────────────
model-name = "cnn"

# ── Run flags (change per experimental condition) ─────────────────────────────
channel-config = "mag_std"
use-replay-buffer = false
replay-buffer-capacity = 16         # windows stored per class per client
replay-sample-size = 16             # total replay windows injected per round
personalization-mode = "fedper"
fedper-adapt-epochs = 1             # same as local-epochs

# [tool.flwr.federations]
# default = "local-simulation"

# [tool.flwr.federations.local-simulation]
# options.num-supernodes = 113
# address = ":local:"
# options.backend.client-resources.num-cpus = 1
# options.backend.client-resources.num-gpus = 0.25